[project]
name = "fuel_crisis_env"
version = "0.1.0"
description = "Fuel crisis OpenEnv environment"
authors = [
    { name = "Ayush" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.2.0"
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"